--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <head>
+    <title>pelmen</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
+  </body>
+</html>
